# tulip-mania-next

./: .env.example  .gitignore  CLAUDE.md  MIGRATION_SUMMARY.md  PROJECT_STATUS.md  README.md  _toc.yml  intro.md  main.py  myst.yml  oversight.md  pyproject.toml  quick-build.bat  quick-build.sh  toc.yml
_static/: _color.scss  custom.css
notebooks/: Countries.ipynb  Markets.ipynb  Other.ipynb  Oversight.ipynb  Signals.ipynb
notebooks/Countries/: ctry_australia.ipynb  ctry_brazil.ipynb  ctry_canada.ipynb  ctry_china.ipynb  ctry_eurozone.ipynb  ctry_germany.ipynb  ctry_japan.ipynb  ctry_new_zealand.ipynb  ctry_sweden.ipynb  ctry_template.ipynb  ctry_uk.ipynb
notebooks/Markets/: Equities.ipynb  Market Commentary.md
notebooks/Markets/Bonds/: flows.ipynb  hedged_yields.ipynb  whats_priced_irs.ipynb  yields_today.ipynb  yields_versus.ipynb
notebooks/Markets/Bonds/Deep Dives/: Australia.ipynb  Bond R-star Framework Eurozone.ipynb  Canada.ipynb  Sweden.ipynb  United States.ipynb
notebooks/Markets/Equities/: deep_dives.ipynb  equities_EPS.ipynb
notebooks/Markets/Equities/Deep Dives/: EU-SX5E.ipynb
notebooks/Other/: Curve Trades.ipynb  Data Visualizer.md
notebooks/Other/Tutorials/: How Iris Works.ipynb  Plotting.ipynb  Using Tulips.ipynb  Using XBBG.ipynb
notebooks/Oversight/: Attribution.md  Performance.md  Risk Dashboard.md  Trade Management.md
notebooks/Signals/: NDX vs RTY.ipynb
tulip_mania_next/: columns_framework.py  utils.py
