[tool.poetry]
name = "jupyterbook2-test"
version = "0.1.0"
description = "JupyterBook 2 test project"
authors = ["Kate Capital"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
